<resources>
    <string name="app_name">MyTrips</string>
    <string name="facebook_app_id">227250021247101</string>
    <string name="fb_login_protocol_scheme">fb227250021247101</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="tab_diaries">My Diaries</string>
    <string name="tab_plans">My Plans</string>
    <string name="profile">Profile</string>
    <string name="stats">Stats</string>
    <string name="fake_username">Tonino Jones</string>
    <string name="user_home_location">Rome, Italy</string>
    <string name="title_placeholder_txt">My Awesome Trip</string>
    <string name="diary_description_placeholder">This is my first trip in the city of nowhere\.\.\.</string>
    <string name="category_placeholer">Adventure</string>
    <string name="date_placeholder">10 aug 2017</string>
    <string name="no_content_placeholder">No content at the moment!\nAre you ready for your next trip?</string>
    <string name="add_diary_str">Add Diary</string>
    <string name="add_plan_str">Add Plan</string>
    <string name="diary_name_description">diary name</string>
    <string name="description_icon">description icon</string>
    <string name="description_placeholder_tv">Description</string>
    <string name="end_date_icon_description">end date icon</string>
    <string name="start_date_icon_description">start date icon</string>
    <string name="start_date_placeholder_et">Start date</string>
    <string name="end_date_placeholder_edt">End date</string>
    <string name="money_placeholder_edt">00.00</string>
    <string name="category_placeholder_edt">category placeholder</string>
    <string name="save_txt_button">Save</string>
    <string name="add_money">add money</string>
    <string name="error_str_len">Max character length is</string>
    <string name="general_error">Something went wrong with your request. Please, try again.</string>
    <string name="missing_data">Please, fill all the required fields correctly</string>
    <string name="error_on_date">The selected end date is after the selected start date. Please, set the dates properly.</string>
    <string name="missing_date">Missing date</string>
    <string name="required_field">Required field</string>
    <string name="note_title_placeholder_txt">My Note Title</string>
    <string name="diary_category_adventure">Adventure</string>
    <string name="diary_category_Business">Business</string>
    <string name="diary_category_Cruise">Cruise</string>
    <string name="diary_category_family_trip">Family Trip</string>
    <string name="diary_category_road_trip">Road Trip</string>
    <string name="diary_category_student_trip">Student Trip</string>
    <string name="diary_category_Vacation">Vacation</string>
    <string name="diary_category_other">Other</string>
    <string-array name="diary_categories_array">
        <item>Adventure</item>
        <item>Business</item>
        <item>Cruise</item>
        <item>Family Trip</item>
        <item>Road Trip</item>
        <item>Student Trip</item>
        <item>Vacation</item>
        <item>Other</item>
    </string-array>
    <string-array name="diary_cotraveler_array">
        <item>Alone</item>
        <item>Co-Travelers</item>
    </string-array>
    <string-array name="current_currencies_array">
        <item>AED - United Arab Emirates Dirham</item>
        <item>AFN - Afghanistan Afghani</item>
        <item>ALL - Albania Lek</item>
        <item>AMD - Armenia Dram</item>
        <item>ANG - Netherlands Antilles Guilder</item>
        <item>AOA - Angola Kwanza</item>
        <item>ARS - Argentina Peso</item>
        <item>AUD - Australia Dollar</item>
        <item>AWG - Aruba Guilder</item>
        <item>AZN - Azerbaijan Manat</item>
        <item>BAM - Bosnia and Herzegovina Convertible Marka</item>
        <item>BBD - Barbados Dollar</item>
        <item>BDT - Bangladesh Taka</item>
        <item>BGN - Bulgaria Lev</item>
        <item>BHD - Bahrain Dinar</item>
        <item>BIF - Burundi Franc</item>
        <item>BMD - Bermuda Dollar</item>
        <item>BND - Brunei Darussalam Dollar</item>
        <item>BOB - Bolivia Bolíviano</item>
        <item>BRL - Brazil Real</item>
        <item>BSD - Bahamas Dollar</item>
        <item>BTN - Bhutan Ngultrum</item>
        <item>BWP - Botswana Pula</item>
        <item>BYN - Belarus Ruble</item>
        <item>BZD - Belize Dollar</item>
        <item>CAD - Canada Dollar</item>
        <item>CDF - Congo/Kinshasa Francv</item>
        <item>CHF - Switzerland Franc</item>
        <item>CLP - Chile Peso</item>
        <item>CNY - China Yuan Renminbi</item>
        <item>COP - Colombia Peso</item>
        <item>CRC - Costa Rica Colon</item>
        <item>CUC - Cuba Convertible Peso</item>
        <item>CUP - Cuba Peso</item>
        <item>CVE - Cape Verde Escudo</item>
        <item>CZK - Czech Republic Koruna</item>
        <item>DJF - Djibouti Franc</item>
        <item>DKK - Denmark Krone</item>
        <item>DOP - Dominican Republic Peso</item>
        <item>DZD - Algeria Dinar</item>
        <item>EGP - Egypt Pound</item>
        <item>ERN - Eritrea Nakfa</item>
        <item>ETB - Ethiopia Birr</item>
        <item>EUR - Euro Member Countries</item>
        <item>FJD - Fiji Dollar</item>
        <item>FKP - Falkland Islands (Malvinas) Pound</item>
        <item>GBP - United Kingdom Pound</item>
        <item>GEL - Georgia Lari</item>
        <item>GGP - Guernsey Pound</item>
        <item>GHS - Ghana Cedi</item>
        <item>GIP - Gibraltar Pound</item>
        <item>GMD - Gambia Dalasi</item>
        <item>GNF - Guinea Franc</item>
        <item>GTQ - Guatemala Quetzal</item>
        <item>GYD - Guyana Dollar</item>
        <item>HKD - Hong Kong Dollar</item>
        <item>HNL - Honduras Lempira</item>
        <item>HRK - Croatia Kuna</item>
        <item>HTG - Haiti Gourde</item>
        <item>HUF - Hungary Forint</item>
        <item>IDR - Indonesia Rupiah</item>
        <item>ILS - Israel Shekel</item>
        <item>IMP - Isle of Man Pound</item>
        <item>INR - India Rupee</item>
        <item>IQD - Iraq Dinar</item>
        <item>IRR - Iran Rial</item>
        <item>ISK - Iceland Krona</item>
        <item>JEP - Jersey Pound</item>
        <item>JMD - Jamaica Dollar</item>
        <item>JOD - Jordan Dinar</item>
        <item>JPY - Japan Yen</item>
        <item>KES - Kenya Shilling</item>
        <item>KGS - Kyrgyzstan Som</item>
        <item>KHR - Cambodia Riel</item>
        <item>KMF - Comorian Franc</item>
        <item>KPW - Korea (North) Won</item>
        <item>KRW - Korea (South) Won</item>
        <item>KWD - Kuwait Dinar</item>
        <item>KYD - Cayman Islands Dollar</item>
        <item>KZT - Kazakhstan Tenge</item>
        <item>LAK - Laos Kip</item>
        <item>LBP - Lebanon Pound</item>
        <item>LKR - Sri Lanka Rupee</item>
        <item>LRD - Liberia Dollar</item>
        <item>LSL - Lesotho Loti</item>
        <item>LYD - Libya Dinar</item>
        <item>MAD - Morocco Dirham</item>
        <item>MDL - Moldova Leu</item>
        <item>MGA - Madagascar Ariary</item>
        <item>MKD - Macedonia Denar</item>
        <item>MMK - Myanmar (Burma) Kyat</item>
        <item>MNT - Mongolia Tughrik</item>
        <item>MOP - Macau Pataca</item>
        <item>MRU - Mauritania Ouguiya</item>
        <item>MUR - Mauritius Rupee</item>
        <item>MVR - Maldives (Maldive Islands) Rufiyaa</item>
        <item>MWK - Malawi Kwacha</item>
        <item>MXN - Mexico Peso</item>
        <item>MYR - Malaysia Ringgit</item>
        <item>MZN - Mozambique Metical</item>
        <item>NAD - Namibia Dollar</item>
        <item>NGN - Nigeria Naira</item>
        <item>NIO - Nicaragua Cordoba</item>
        <item>NOK - Norway Krone</item>
        <item>NPR - Nepal Rupee</item>
        <item>NZD - New Zealand Dollar</item>
        <item>OMR - Oman Rial</item>
        <item>PAB - Panama Balboa</item>
        <item>PEN - Peru Sol</item>
        <item>PGK - Papua New Guinea Kina</item>
        <item>PHP - Philippines Piso</item>
        <item>PKR - Pakistan Rupee</item>
        <item>PLN - Poland Zloty</item>
        <item>PYG - Paraguay Guarani</item>
        <item>QAR - Qatar Riyal</item>
        <item>RON - Romania Leu</item>
        <item>RSD - Serbia Dinar</item>
        <item>RUB - Russia Ruble</item>
        <item>RWF - Rwanda Franc</item>
        <item>SAR - Saudi Arabia Riyal</item>
        <item>SBD - Solomon Islands Dollar</item>
        <item>SCR - Seychelles Rupee</item>
        <item>SDG - Sudan Pound</item>
        <item>SEK - Sweden Krona</item>
        <item>SGD - Singapore Dollar</item>
        <item>SHP - Saint Helena Pound</item>
        <item>SLL - Sierra Leone Leone</item>
        <item>SOS - Somalia Shilling</item>
        <item>SPL* - Seborga Luigino</item>
        <item>SRD - Suriname Dollar</item>
        <item>STN - São Tomé and Príncipe Dobra</item>
        <item>SVC - El Salvador Colon</item>
        <item>SYP - Syria Pound</item>
        <item>SZL - Swaziland Lilangeni</item>
        <item>THB - Thailand Baht</item>
        <item>TJS - Tajikistan Somoni</item>
        <item>TMT - Turkmenistan Manat</item>
        <item>TND - Tunisia Dinar</item>
        <item>TOP - Tonga Pa'anga</item>
        <item>TRY - Turkey Lira</item>
        <item>TTD - Trinidad and Tobago Dollar</item>
        <item>TVD - Tuvalu Dollar</item>
        <item>TWD - Taiwan New Dollar</item>
        <item>TZS - Tanzania Shilling</item>
        <item>UAH - Ukraine Hryvnia</item>
        <item>UGX - Uganda Shilling</item>
        <item>USD - United States Dollar</item>
        <item>UYU - Uruguay Peso</item>
        <item>UZS - Uzbekistan Som</item>
        <item>VEF - Venezuela Bolívar</item>
        <item>VND - Viet Nam Dong</item>
        <item>VUV - Vanuatu Vatu</item>
        <item>WST - Samoa Tala</item>
        <item>XAF - Communauté Financière Africaine (BEAC) CFA Franc BEAC</item>
        <item>XCD - East Caribbean Dollar</item>
        <item>XDR - International Monetary Fund (IMF) Special Drawing Rights</item>
        <item>XOF - Communauté Financière Africaine (BCEAO) Franc</item>
        <item>XPF - Comptoirs Français du Pacifique (CFP) Franc</item>
        <item>YER - Yemen Rial</item>
        <item>ZAR - South Africa Rand</item>
        <item>ZMW - Zambia Kwacha</item>
        <item>ZWD - Zimbabwe Dollar</item>
    </string-array>
    <string name="title_activity_diary_detail">DiaryDetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="tab_notes">Notes</string>
    <string name="note_description_placeholder">Write something about your note…</string>
    <string name="note_date_placeholder_et">Set Date</string>
    <string name="note_time_placeholder_edt">Set Time</string>
    <string name="time_icon_desc">time icon</string>
    <string name="category_icon_description">category icon</string>
    <string name="title_icon_desc">title icon</string>
    <string name="currency_icon">currency icon</string>
    <string name="fake_notes_num">30</string>
    <string name="notes_stats_title">Notes</string>
    <string name="places_stats_title">Check-Ins</string>
    <string name="days_stats_title">Days</string>
    <string name="fake_days_stats">1\/4</string>
    <string name="fake_places_num">14</string>
    <string name="budget_stats_title">Budget</string>
    <string name="fake_budget">200</string>
    <string name="budget_avg_title">Budget/days</string>
    <string name="fake_budget_avg">50€</string>
    <string name="budget_distribution">Budget Distribution</string>
    <string name="daily_trend">Daily Trend</string>
    <string name="countries_title">Countries</string>
    <string name="cities_stats_title">Cities</string>
    <string name="activities_title">Activities</string>
    <string name="fake_activities_num">150</string>
    <string name="diaries_title">Diaries</string>
</resources>