<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_gray"
    tools:context=".DiaryDetailActivity">
    <android.support.v7.widget.CardView
        android:id="@+id/stats_container"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/margin_5dp"
            android:paddingTop="@dimen/margin_5dp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    style="@style/StatsTitle"
                    android:text="@string/days_stats_title"/>
                <TextView
                    style="@style/StatsContent"
                    android:text="@string/fake_days_stats"/>
            </LinearLayout>
            <View
                android:id="@+id/divider_1"
                style="@style/dividerVertical" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    style="@style/StatsTitle"
                    android:text="@string/notes_stats_title"/>
                <TextView
                    style="@style/StatsContent"
                    android:text="@string/fake_notes_num"/>
            </LinearLayout>
            <View
                android:id="@+id/divider_2"
                style="@style/dividerVertical"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    style="@style/StatsTitle"
                    android:text="@string/places_stats_title"/>
                <TextView
                    style="@style/StatsContent"
                    android:text="@string/fake_places_num"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/money_stat_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:paddingTop="@dimen/margin_5dp"
            android:paddingBottom="@dimen/margin_5dp"
            android:weightSum="2">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    style="@style/StatsTitle"
                    android:textColor="@color/dark_gray"
                    android:text="@string/budget_stats_title"/>
                <TextView
                    style="@style/StatsContent"
                    android:textColor="@color/dark_gray"
                    android:text="@string/fake_budget"/>
            </LinearLayout>
            <View
                android:id="@+id/divider_3"
                style="@style/dividerVertical"
                android:background="@color/dark_gray"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    style="@style/StatsTitle"
                    android:textColor="@color/dark_gray"
                    android:text="@string/budget_avg_title"/>
                <TextView
                    style="@style/StatsContent"
                    android:textColor="@color/dark_gray"
                    android:text="@string/fake_budget_avg"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    </android.support.v7.widget.CardView>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/stats_scroller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_below="@+id/stats_container">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:orientation="vertical">

            <TextView
                style="@style/BaseTextView"
                android:text="@string/daily_trend"
                android:layout_marginBottom="@dimen/margin_10dp"/>
            <include
                layout="@layout/line_chart"
                android:padding="@dimen/margin_10dp" />
            <TextView
                style="@style/BaseTextView"
                android:text="@string/budget_distribution"
                android:layout_marginTop="@dimen/margin_10dp"
                android:layout_marginBottom="@dimen/margin_10dp"/>
            <include layout="@layout/pie_chart"
                tools:ignore="IncludeLayoutParam" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>