<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardElevation="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/margin_5dp"
            android:paddingTop="@dimen/margin_5dp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    style="@style/StatsTitle"
                    android:text="@string/countries_title"/>
                <TextView
                    android:id="@+id/total_countries_tv"
                    style="@style/StatsContent"
                    android:text="@string/fake_notes_num"/>
            </LinearLayout>
            <View
                android:id="@+id/divider_1"
                style="@style/dividerVertical" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    style="@style/StatsTitle"
                    android:text="@string/cities_stats_title"/>
                <TextView
                    android:id="@+id/total_cities_tv"
                    style="@style/StatsContent"
                    android:text="@string/fake_notes_num"/>
            </LinearLayout>
            <View
                android:id="@+id/divider_2"
                style="@style/dividerVertical"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    style="@style/StatsTitle"
                    android:text="@string/places_stats_title"/>
                <TextView
                    android:id="@+id/total_checkins_tv"
                    style="@style/StatsContent"
                    android:text="@string/fake_places_num"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/activities_days_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:paddingTop="@dimen/margin_5dp"
            android:paddingBottom="@dimen/margin_5dp"
            android:weightSum="3">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    style="@style/StatsTitle"
                    android:textColor="@color/dark_gray"
                    android:text="@string/days_stats_title"/>
                <TextView
                    android:id="@+id/total_days_tv"
                    style="@style/StatsContent"
                    android:textColor="@color/dark_gray"
                    android:text="@string/fake_budget"/>
            </LinearLayout>
            <View
                android:id="@+id/divider_4"
                style="@style/dividerVertical"
                android:background="@color/dark_gray"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    style="@style/StatsTitle"
                    android:textColor="@color/dark_gray"
                    android:text="@string/activities_title"/>
                <TextView
                    android:id="@+id/activities_stats_tv"
                    style="@style/StatsContent"
                    android:textColor="@color/dark_gray"
                    android:text="@string/fake_activities_num"/>
            </LinearLayout>
            <View
                android:id="@+id/divider_5"
                style="@style/dividerVertical"
                android:background="@color/dark_gray"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    style="@style/StatsTitle"
                    android:textColor="@color/dark_gray"
                    android:text="@string/diaries_title"/>
                <TextView
                    android:id="@+id/total_diaries_tv"
                    style="@style/StatsContent"
                    android:textColor="@color/dark_gray"
                    android:text="@string/fake_activities_num"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
