<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/note_title_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/add_note_margin_top"
        android:contentDescription="@string/title_icon_desc"
        android:src="@drawable/ic_title" />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/note_name_txtinl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/note_title_icon"
        android:layout_marginTop="@dimen/add_note_margin_top"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/note_name_et_limit"
        app:counterTextAppearance="@style/CounterText"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorText"
        app:hintEnabled="false">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/note_name_edtxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_placeholder_txt"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:orientation="horizontal"
            android:scrollHorizontally="true"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/note_datetime_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/note_name_txtinl"
        android:layout_marginTop="@dimen/add_note_margin_top"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/note_start_date_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/add_note_margin_top"
            android:contentDescription="@string/start_date_icon_description"
            android:src="@drawable/ic_set_date" />

        <EditText
            android:id="@+id/note_start_date_edt"
            style="@style/DatePickerEditText"
            android:layout_width="130dp"
            android:hint="@string/note_date_placeholder_et"
            tools:ignore="TextFields"
            android:focusableInTouchMode="true"  />

        <ImageView
            android:id="@+id/note_time_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/add_note_margin_top"
            android:contentDescription="@string/time_icon_desc"
            android:src="@drawable/ic_set_time" />

        <EditText
            android:id="@+id/note_time_edt"
            style="@style/DatePickerEditText"
            android:hint="@string/note_time_placeholder_edt"
            tools:ignore="TextFields"/>
    </LinearLayout>


    <View
        android:id="@+id/divider_1"
        style="@style/dividerHorizontal"
        android:layout_marginTop="@dimen/margin_10dp"
        android:layout_below="@+id/note_datetime_container" />

    <LinearLayout
        android:id="@+id/note_category_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider_1"
        android:layout_marginTop="@dimen/add_note_margin_top"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/note_category_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/category_icon_description"
            android:src="@drawable/ic_set_type" />

        <Spinner
            android:id="@+id/note_category_spinner"
            style="@style/AddDiarySpinner" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/note_category_container"
        android:layout_marginTop="@dimen/add_note_margin_top"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/note_description_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_icon"
            android:src="@drawable/ic_description" />

        <TextView
            android:id="@+id/note_description_tv"
            style="@style/BaseTextView"
            android:text="@string/description_placeholder_tv"
            android:textSize="@dimen/form_tv_size" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/note_description_txtinl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/container_description"
        android:layout_marginTop="@dimen/add_note_margin_top"
        android:inputType="textMultiLine"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/note_description_et_limit"
        app:counterTextAppearance="@style/CounterText"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/ErrorText"
        app:hintEnabled="false">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/note_description_edtxt"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:gravity="start|top"
            android:hint="@string/note_description_placeholder" />
    </android.support.design.widget.TextInputLayout>


    <View
        android:id="@+id/divider_2"
        style="@style/dividerHorizontal"
        android:layout_marginTop="@dimen/add_note_margin_top"
        android:layout_below="@+id/note_description_txtinl" />

    <LinearLayout
        android:id="@+id/note_budget_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider_2"
        android:layout_marginTop="@dimen/add_note_margin_top"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/note_money_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/add_money"
            android:src="@drawable/ic_budget" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/note_money_txt_inl"
            android:layout_width="@dimen/money_txted_width"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_5dp"
            app:hintEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/note_money_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/money_placeholder_edt"
                android:inputType="numberDecimal"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/note_currency_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/currency_icon"
            android:src="@drawable/ic_currency" />
        <Spinner
            android:id="@+id/note_currency_spinner"
            style="@style/AddDiarySpinner" />
    </LinearLayout>

    <View
        android:id="@+id/divider_3"
        style="@style/dividerHorizontal"
        android:layout_marginTop="@dimen/add_note_margin_top"
        android:layout_below="@+id/note_budget_container" />
</RelativeLayout>